service tests clean up